<resources>
    <string name="app_name">Goff</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="reset">Reset</string>
    <string name="register">Register</string>
    <string name="welcome">WelCome</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="name">NAME</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="number_phone">NUMBER PHONE</string>
    <string name="password">PASSWORD</string>
    <string name="sign_up">Sign Up</string>
    <string name="return_login">Return Login</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_your_password">Forgot Your Password</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="value">Value</string>
    <string name="temperature">Temperature</string>

</resources>