<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/register"
            android:title="@string/register" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_baseline_person_pin_24"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_reset"
            android:icon="@drawable/reset"
            android:title="@string/reset" />
    </group>
</menu>